@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.160 (gritter) 10/30/06";
+	"@(#)/usr/ucb/otfdump.sl	7.161 (gritter) 10/30/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.160 (gritter) 10/30/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.160 (gritter) 10/30/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.161 (gritter) 10/30/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.161 (gritter) 10/30/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.160 (gritter) 10/30/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.161 (gritter) 10/30/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.160 (gritter) 10/30/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.161 (gritter) 10/30/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.160";
+const char revision[] = "7.161";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.98 (gritter) 10/29/06
@@ -37,7 +37,7 @@ nroff.d/n10.c: * Sccsid @(#)n10.c	1.30 (gritter) 9/5/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.48 (gritter) 9/8/06
 nroff.d/pt.h: *	Sccsid @(#)pt.h	1.41 (gritter) 8/12/06
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.6 (gritter) 4/25/06
-troff.d/afm.c: * Sccsid @(#)afm.c	1.61 (gritter) 10/5/06
+troff.d/afm.c: * Sccsid @(#)afm.c	1.62 (gritter) 10/30/06
 troff.d/afm.h: * Sccsid @(#)afm.h	1.35 (gritter) 10/5/06
 troff.d/dev.h: * Sccsid @(#)dev.h	1.15 (gritter) 9/24/06
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
